@@ -20,11 +20,14 @@
  */
 package org.openremote.controller.protocol.port;
 
+import org.openremote.controller.exception.OpenRemoteException;
+
 /**
  * Exception related to ports.
  * 
  */
-public class PortException extends Exception {
+public class PortException extends OpenRemoteException
+{
    private static final long serialVersionUID = 1L;
    public static final int INVALID_MESSAGE = -2;
    public static final int SERVICE_TIMEOUT = -3;
@@ -34,13 +37,81 @@ public class PortException extends Exception {
    private int code;
    private int rootCode;
 
+   private static String createErrorMessage(int code, int rootCode)
+   {
+     String msg;
+
+     if(code == INVALID_MESSAGE)
+     {
+       msg = String.format("Code=%d (INVALID_MESSAGE), RootCode=%d.", code, rootCode);
+     }
+
+     else if(code == SERVICE_TIMEOUT)
+     {
+       msg = String.format("Code=%d (SERVICE_TIMEOUT), RootCode=%d.", code, rootCode);
+     }
+
+     else if(code == SERVICE_FAILED)
+     {
+       msg = String.format("Code=%d (SERVICE_FAILED), RootCode=%d.", code, rootCode);
+     }
+
+     else if(code == ALREADY_LISTENING)
+     {
+       msg = String.format("Code=%d (ALREADY_LISTENING), RootCode=%d.", code, rootCode);
+     }
+
+     else if(code == INVALID_CONFIGURATION)
+     {
+       msg = String.format("Code=%d (INVALID_CONFIGURATION), RootCode=%d.", code, rootCode);
+     }
+
+     else
+     {
+       msg = String.format("Code=%d, RootCode=%d.", code, rootCode);
+     }
+
+     return msg;
+   }
+
    public PortException(int code) {
       this(code, 0);
    }
 
    public PortException(int code, int rootCode) {
-      this.code = code;
-      this.rootCode = rootCode;
+     this(code, rootCode, createErrorMessage(code, rootCode));
+   }
+
+   public PortException(int code, int rootCode, String msg)
+   {
+     super(msg);
+
+     this.code = code;
+     this.rootCode = rootCode;
+   }
+
+   public PortException(int code, int rootCode, String msg, Object... params)
+   {
+     super(format(msg, params));
+
+     this.code = code;
+     this.rootCode = rootCode;
+   }
+
+   public PortException(int code, int rootCode, String msg, Throwable cause)
+   {
+     super(msg, cause);
+
+     this.code = code;
+     this.rootCode = rootCode;
+   }
+
+   public PortException(int code, int rootCode, String msg, Throwable cause, Object... params)
+   {
+     super(format(msg, params), cause);
+
+     this.code = code;
+     this.rootCode = rootCode;
    }
 
    public int getCode() {
